--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,38 @@
-.App{
-    height: 100%;
+.App {
+  .inputName,
+  .inputEmail,
+  .inputDescription,
+  .nameLabel,
+  .emailLabel,
+  .descriptionLabel {
+    width: 100%;
+  }
 
-    &__main-page-content{
-        height: calc(100% - 80px);
+  .nameLabel,
+  .emailLabel,
+  .descriptionLabel {
+    font-size: 1.2rem; /* Adjust as needed */
+  }
+
+  /* Media query for small screens */
+  @media only screen and (max-width: 768px) {
+    .contact__content__form__controlswrapper {
+      display: flex;
+      flex-direction: column;
     }
+
+    .contact__content__form__controlswrapper div {
+      margin-bottom: 1rem;
+    }
+
+    .contact__content__form button {
+      width: 100%;
+    }
+  }
+
+  height: 100%;
+
+  &__main-page-content {
+    height: calc(100% - 80px);
+  }
 }
