--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,18 @@
   .nameLabel,
   .emailLabel,
   .descriptionLabel {
-    font-size: 1.2rem; /* Adjust as needed */
+    font-size: 1.2rem;
+    z-index: 3;
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+    z-index: 999; /* A high value to cover other content */
   }
 
   /* Media query for small screens */
@@ -19,6 +30,11 @@
     .contact__content__form__controlswrapper {
       display: flex;
       flex-direction: column;
+      z-index: 3; /* Ensure the form content is below the menu */
+    }
+
+    .navbar__container__menu {
+      z-index: 3;
     }
 
     .contact__content__form__controlswrapper div {
@@ -27,6 +43,14 @@
 
     .contact__content__form button {
       width: 100%;
+    }
+
+    .about,
+    .home,
+    .resume,
+    .portfolio {
+      display: flex;
+      flex-direction: column;
     }
   }
 
