--- a/src/App.scss
+++ b/src/App.scss
@@ -21,20 +21,60 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
     z-index: 999; /* A high value to cover other content */
   }
 
   /* Media query for small screens */
   @media only screen and (max-width: 768px) {
     .contact__content__form__controlswrapper {
-      display: flex;
+      display: flex; /* Change to "flex" */
       flex-direction: column;
       z-index: 3; /* Ensure the form content is below the menu */
     }
 
     .navbar__container__menu {
-      z-index: 3;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      left: 50%;
+      right: 50%;
+
+      transform: translateX(0%);
+      opacity: 0;
+      transition: all 1.5s ease;
+      top: 10%;
+      bottom: 10%;
+      left: 100%;
+      right: 100%;
+      z-index: 101;
+
+      &.active {
+        background: #181818;
+        left: 0;
+        opacity: 0.9;
+        font-size: 1rem;
+        padding: 10px 0;
+        align-content: center;
+        align-items: center;
+      }
+
+      &__item {
+        border-bottom: 1px solid #282828;
+        margin: 0;
+        padding: 5px 0 0 0;
+      }
+    }
+
+    .nav-icon {
+      display: block;
+      cursor: pointer;
+      color: var(--yellow-theme-main-color);
+      padding-right: 5px;
     }
 
     .contact__content__form__controlswrapper div {
@@ -51,40 +91,8 @@
     .portfolio {
       display: flex;
       flex-direction: column;
-    }
-  }
-
-  height: 100%;
-
-  &__main-page-content {
-    height: calc(100% - 80px);
-  }
-
-  @media only screen and (max-width: 300px) {
-    .contact__content__form__controlswrapper {
-      display: flex;
-      flex-direction: column;
-      z-index: 3; /* Ensure the form content is below the menu */
-    }
-
-    .navbar__container__menu {
-      z-index: 3;
-    }
-
-    .contact__content__form__controlswrapper div {
-      margin-bottom: 1rem;
-    }
-
-    .contact__content__form button {
-      width: 80%;
-    }
-
-    .about,
-    .home,
-    .resume,
-    .portfolio {
-      display: flex;
-      flex-direction: column;
+      align-items: center;
+      align-content: center;
     }
   }
 
