--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -6,6 +6,7 @@
   align-items: center;
   font-size: 1.2rem;
   position: sticky;
+  z-index: 100;
 
   &__container {
     display: flex;
@@ -53,80 +54,50 @@
     }
   }
 }
+.page-content {
+  /* Your existing styles for the content */
+  position: relative; /* Make the content a positioning context */
+  z-index: 1; /* Ensure the content is below the navbar */
+}
 
 .nav-icon {
   display: none;
 }
 
-@media only screen and (max-width: 300px) {
-  .navbar__container__menu {
-    display: flex;
-    flex-direction: row; /* Change to row to align items horizontally */
-    justify-content: space-between; /* Distribute items horizontally */
-    align-items: center; /* Center items vertically */
-    width: 100%;
-    position: center;
-    top: 70px;
-    left: 100%;
-    opacity: 0;
-    transition: all 0.5s ease;
-
-    &.active {
-      background: #181818;
-      left: 3px; /* Add "px" for specifying the position */
-      opacity: 1;
-    }
-
-    &__item {
-      border-bottom: 1px solid #282828;
-      margin: 0;
-      font-size: 0.7rem; /* Adjust the font size as needed */
-      width: 100%;
-    }
-  }
-
-  .nav-icon {
-    display: block;
-    cursor: pointer;
-    color: var(--yellow-theme-main-color);
-    font-size: 1rem; /* Adjust the font size as needed */
-    padding-right: 10px; /* Adjust as needed */
-  }
-}
-
 @media only screen and (max-width: 768px) {
   .navbar__container__menu {
-    width: 50%; /* Adjust the width as needed to fit the screen */
-  }
-  .nav-icon {
-    padding-right: 10px; /* Adjust as needed */
-  }
-
-  .navbar__container__menu {
     display: flex;
-    flex-direction: row; /* Change to row to align items horizontally */
-    justify-content: space-between; /* Distribute items horizontally */
-    align-items: center; /* Center items vertically */
-    width: 50%; /* Adjust the width as needed to fit the screen */
-    position: absolute; /* Use absolute positioning */
-    top: 10px;
-    left: 50%; /* Center horizontally */
-    transform: translateX(-50%); /* Center horizontally */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    //top: 50%;
+    left: 50%;
+    right: 50%;
+
+    transform: translateX(50%);
     opacity: 0;
     transition: all 0.5s ease;
+    top: 100%; /* Position at the top of the screen */
+    left: 100%;
+    z-index: 101;
 
     &.active {
       background: #181818;
       left: 0;
       opacity: 1;
-      font-size: 1rem; /* Adjust the font size as needed */
+      font-size: 1rem;
       padding: 10px 0;
+      align-content: center;
+      align-items: center;
     }
 
     &__item {
       border-bottom: 1px solid #282828;
       margin: 0;
-      padding: 5px 0;
+      padding: 5px 0 0 0;
     }
   }
 
@@ -134,6 +105,6 @@
     display: block;
     cursor: pointer;
     color: var(--yellow-theme-main-color);
-    padding-right: 5px; /* Adjust as needed */
+    padding-right: 5px;
   }
 }
